V1.0 main (#22)
* optimize get API

* add GetSupportStrategy

* change response

* add Support gas

* add userop convert

* add userop gasCompute

* add paymaster_generator impl
change swagger

* update

* update

* support get token price

* fix debug

* fix debug

* optimize gas compute

* update API

* update API

* update API

* update API

* fix bug

* fix bug

* fix bug

* fix bug

* generatePaymasterData

* add GetCoinPrice

* update PackUserOp

* update PackUserOp

* update PackUserOp

* update PackUserOp

* update PackUserOp

* update PackUserOp

* update PackUserOp

* update PackUserOp

* feat: change call methods function

* feat: split string

* update PackUserOp

* fix packOp bug

* fix packOp bug

* fix packOp bug

* fix packOp bug

* fix sign bug

* fix sign bug

* fix sign bug

* fix sign bug

* fix sign bug

* fix sign bug

* change paymasterAddress

* change paymasterAddress

* change paymasterAddress

* v1.0 init

* v1.0 init

* init

* v1.0 add abi

* optimize

* optimize

* optimize

* optimize

* optimize

* optimize

* optimize

* optimize

* optimize

* optimize

* optimize

* optimize

* optimize

* optimize

* optimize

* add verifying paymaster

* fix start error

* optimize

* optimize catalog

* optimize catalog

* add Starknet demo

* optimize

* optimize

* optimize

* optimize

* optimize

* optimize

* add Estimate userOp Gas API

* add Estimate userOp Gas API

* add Estimate userOp Gas API

* optimize

* optimize

* optimize

* optimize Gas Compute

* optimize Gas Compute

* optimize Gas Compute

* optimize Gas Compute
getBasicPreVerificationGas

* optimize Gas Compute
getPreVerificationGas

* optimize Gas Compute
getPreVerificationGas

* optimize Gas Compute
getPreVerificationGas

* optimize Gas Compute
getPreVerificationGas

* optimize Gas Comp
