# rpc_server/api/v1/get_support_strategy.go
@@ -1,43 +1,0 @@
-package v1
-
-import (
-	"AAStarCommunity/EthPaymaster_BackService/common/model"
-	"AAStarCommunity/EthPaymaster_BackService/service/operator"
-	"fmt"
-	"github.com/gin-gonic/gin"
-	"net/http"
-)
-
-// GetSupportStrategy
-// @Tags Sponsor
-// @Description get the support strategy
-// @Accept json
-// @Produce json
-// @Success 200
-// @Router /api/v1/get-support-strategy [GET]
-// @Security JWT
-func GetSupportStrategy(c *gin.Context) {
-	request := model.GetSupportStrategyRequest{}
-	response := model.GetResponse()
-
-	//1. API validate
-	if err := c.ShouldBindJSON(&request); err != nil {
-		errStr := fmt.Sprintf("Request Error [%v]", err)
-		response.SetHttpCode(http.StatusBadRequest).FailCode(c, http.StatusBadRequest, errStr)
-		return
-	}
-	if err := request.Validate(); err != nil {
-		errStr := fmt.Sprintf("Request Error [%v]", err)
-		response.SetHttpCode(http.StatusBadRequest).FailCode(c, http.StatusBadRequest, errStr)
-		return
-	}
-
-	if result, err := operator.GetSupportStrategyExecute(&request); err != nil {
-		errStr := fmt.Sprintf("%v", err)
-		response.SetHttpCode(http.StatusInternalServerError).FailCode(c, http.StatusInternalServerError, errStr)
-		return
-	} else {
-		response.WithData(result).Success(c)
-		return
-	}
-}
